; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/lib/extr_threadmap.c_perf_thread_map__new_dummy.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/lib/extr_threadmap.c_perf_thread_map__new_dummy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.perf_thread_map = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.perf_thread_map* @perf_thread_map__new_dummy() #0 {
  %1 = alloca %struct.perf_thread_map*, align 8
  %2 = call %struct.perf_thread_map* @thread_map__alloc(i32 1)
  store %struct.perf_thread_map* %2, %struct.perf_thread_map** %1, align 8
  %3 = load %struct.perf_thread_map*, %struct.perf_thread_map** %1, align 8
  %4 = icmp ne %struct.perf_thread_map* %3, null
  br i1 %4, label %5, label %13

5:                                                ; preds = %0
  %6 = load %struct.perf_thread_map*, %struct.perf_thread_map** %1, align 8
  %7 = call i32 @perf_thread_map__set_pid(%struct.perf_thread_map* %6, i32 0, i32 -1)
  %8 = load %struct.perf_thread_map*, %struct.perf_thread_map** %1, align 8
  %9 = getelementptr inbounds %struct.perf_thread_map, %struct.perf_thread_map* %8, i32 0, i32 0
  store i32 1, i32* %9, align 4
  %10 = load %struct.perf_thread_map*, %struct.perf_thread_map** %1, align 8
  %11 = getelementptr inbounds %struct.perf_thread_map, %struct.perf_thread_map* %10, i32 0, i32 1
  %12 = call i32 @refcount_set(i32* %11, i32 1)
  br label %13

13:                                               ; preds = %5, %0
  %14 = load %struct.perf_thread_map*, %struct.perf_thread_map** %1, align 8
  ret %struct.perf_thread_map* %14
}

declare dso_local %struct.perf_thread_map* @thread_map__alloc(i32) #1

declare dso_local i32 @perf_thread_map__set_pid(%struct.perf_thread_map*, i32, i32) #1

declare dso_local i32 @refcount_set(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
